--- a/Linear Model in js/linear_learner.html
+++ b/Linear Model in js/linear_learner.html
@@ -19,14 +19,12 @@
     function make_prediction() {
       var a, b, output;
       a = Number(document.getElementById("first").value);
-      // b = Number(document.getElementById("second").value);
-      input_xs = tf.tensor2d([
-        [a] ,[1,1]
-      ]);
+      input_xs = tf.tensor1d([a]);
+      console.log(input_xs)
       output = model.predict(input_xs);
       const outputData = output.dataSync();
       console.log(outputData)
-      document.getElementById("answer").value = Number(outputData[0]);
+      document.getElementById("answer").value = Number(Math.round(outputData));
     }
   </script>
 </head>
